--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -6,7 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <style>
-    body{padding: 15px;background-color: aqua;}
+        body{background-color: lightblue; font-size: 30px; padding: 30px;}
+        h1{font-size: 35px;text-transform: uppercase;text-align: center;}
+        p{font-size: 16px;text-align: center;}
+    /* body{padding: 15px;background-color: aqua;} */
     </style>
     
 </head>
