New paragraph from pc i

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -12,7 +12,8 @@
     <%- include ('partials/nav.ejs') %>
 
     <h1>I am index file</h1>
-    <p>This index file is EJS files.!!!</p>
+    <p>This index file is EJS files.</p>
+    <p>Want to see if the git chnages are happening or not</p>
 
     
 </body>
