--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -17,6 +17,7 @@
     <%- include ('partials/nav.ejs') %>
     <h1>Welcome to Node</h1>
     <p>Please wait while the api is loading</p>
+    <p>Chnages from VS code</p>
     <p>Welcome to the profile of <%=person%> </p>
     <p><%=person%>'s hobbies are : </p>
     <!-- <ul>
