--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -11,9 +11,9 @@
 <body>
     <%- include ('partials/nav.ejs') %>
 
-    <h1>I am index file/ Home page</h1>
-    <p>This index file is EJS files.</p>
-    <p>Want to see if the git chnages are happening or not</p>
+    <h1>Contact Page</h1>
+    <p>You can contact me at </p>
+    <p> 1111 </p>
 
     
 </body>
