--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,7 +1,7 @@
 <nav>
     <ul>
         <li><a href="/home">Home</a></li>
-        <li><a href="/">Contact</a></li>
+        <li><a href="/contact">Contact</a></li>
         <li><a href="/profile/:name">Profile</a></li>
     </ul>
 </nav>
