--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <style>
+    <!-- <style>
         body{background-color: lightblue; font-size: 30px; padding: 30px;}
         h1{font-size: 35px;text-transform: uppercase;text-align: center;}
         p{font-size: 16px;text-align: center;}
     /* body{padding: 15px;background-color: aqua;} */
-    </style>
+    </style> -->
+    <link rel="stylesheet" href="/assets/styles.css" type="text/css">
+
     
 </head>
 <body>
