--- a/assets/styles.css
+++ b/assets/styles.css
@@ -1,3 +1,4 @@
 body{background-color: lightblue; font-size: 30px; padding: 30px;}
 h1{font-size: 35px;text-transform: uppercase;text-align: center;}
 p{font-size: 16px;text-align: center;}
+label{font-size: 20px;}
