--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -16,13 +16,14 @@
     <p>Your age is <%=qs.age%></p>
     <p>You can contact me at </p>
     <p> 123 </p>
-    <form id="contact-form">
+    <form id="contact-form" method="POST" action="/contact-success">
         <label for="who">Who do you want to contact?</label>
         <input type="text" name="who" value="<%=qs.name%>">
         <label for="department">Which department?</label>
         <input type="text" name="department" value="<%=qs.department%>">
         <label for="email">Your email?</label>
         <input type="text" name="email" value="<%=qs.email%>">
+        <input type="submit" value="submit">
 
     </form>
 
